[aliases]
test = pytest

[metadata]
keywords = peripherals raspberrypi spi i2c sensors buttons gpio
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: System :: Hardware
